[metadata]
name = syslogen
description = Easy and simple Syslog generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zakharb/syslogen
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    syslogen = syslogen.__main__:main